tools/archive/academy/media/jellyfin/external/ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: jellyfin
  namespace: fkn
spec:
  type: ExternalName
  ports:
    - name: http
      port: 8096
      targetPort: 8096
  externalName: 10.131.181.4
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  namespace: fkn
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.chancey.dev`)
      kind: Rule
      priority: 10
      services:
        - name: jellyfin
          kind: Service
          port: 8096
  tls:
    secretName: jellyfin-cert-tls
